Correct social media links for Hero section

--- a/source/index.njk
+++ b/source/index.njk
@@ -30,10 +30,10 @@
                 <p>I love experimenting with and sharing about cool new Web technologies and techniques.</p>
                 <p>I'm <strong>@arnellebalane</strong> on
                     <a class="SocialIcon SocialIcon--github" href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferrer">Github</a>
-                    <a class="SocialIcon SocialIcon--twitter" href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferrer">Twitter</a>
-                    <a class="SocialIcon SocialIcon--devto" href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferrer">Dev.to</a>
-                    <a class="SocialIcon SocialIcon--instagram" href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferrer">Instagram</a>
-                    <a class="SocialIcon SocialIcon--linkedin" href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                    <a class="SocialIcon SocialIcon--twitter" href="https://twitter.com/arnellebalane" target="_blank" rel="noopener noreferrer">Twitter</a>
+                    <a class="SocialIcon SocialIcon--devto" href="https://dev.to/arnellebalane" target="_blank" rel="noopener noreferrer">Dev.to</a>
+                    <a class="SocialIcon SocialIcon--instagram" href="https://instagram.com/arnellebalane/" target="_blank" rel="noopener noreferrer">Instagram</a>
+                    <a class="SocialIcon SocialIcon--linkedin" href="https://linkedin.com/in/arnellebalane/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                 </p>
             </div>
         </section>
