--- a/source/index.njk
+++ b/source/index.njk
@@ -37,5 +37,20 @@
                 </p>
             </div>
         </section>
+
+        <section class="Section About l-Wrapper l-LeftTwoThirds">
+            <h1 class="Section__Title">About</h1>
+
+            <p>
+                I’m currently a Software Developer at <a href="https://newlogic.io" target="_blank" rel="noopener noreferrer">Newlogic</a>. Previously, I was
+                the Lead Frontend Developer at <a href="https://channelfix.com" target="_blank" rel="noopener noreferrer">Channelfix</a>. I also used to teach a
+                Web Engineering class at the University of the Philippines Cebu as a part-time lecturer.
+            </p>
+
+            <p>
+                On weekends, I’m a co-organizer for <a href="https://gdgcebu.org" target="_blank" rel="noopener noreferrer">Google Developers Group Cebu</a>,
+                a small team that sets up tech events around the Visayas region. You’ll often find me giving talks and workshops at those and other community events.
+            </p>
+        </section>
     </body>
 </html>
