Move static files inside static directory

--- a/source/index.njk
+++ b/source/index.njk
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="stylesheets/index.css">
-        <link rel="stylesheet" href="stylesheets/home.css">
+        <link rel="stylesheet" href="static/stylesheets/index.css">
+        <link rel="stylesheet" href="static/stylesheets/home.css">
 
         <title>Arnelle Balane</title>
     </head>
@@ -22,7 +22,7 @@
         </header>
 
         <section class="Hero l-Wrapper l-LeftTwoThirds">
-            <img class="Avatar" src="images/avatar.jpg" alt="Arnelle Balane">
+            <img class="Avatar" src="static/images/avatar.jpg" alt="Arnelle Balane">
 
             <div class="Hero__Details">
                 <h2 class="Hero__Title">Web Developer from <strong>Cebu, Philippines</strong></h2>
