Add markup and styles for Talks & Workshops section

--- a/source/index.njk
+++ b/source/index.njk
@@ -38,7 +38,7 @@
             </div>
         </section>
 
-        <section class="Section About l-Wrapper l-LeftTwoThirds">
+        <section class="Section l-Wrapper l-LeftTwoThirds">
             <h1 class="Section__Title">About</h1>
 
             <p>
@@ -52,6 +52,39 @@
                 a small team that sets up tech events around the Visayas region. You’ll often find me giving talks and workshops at
                 those and other community events.
             </p>
+        </section>
+
+        <section class="Section TalksAndWorkshops l-Wrapper l-RightTwoThirds u-Clearfix">
+            <img src="static/images/speaking.jpg" alt="Arnelle Balane">
+
+            <h1 class="Section__Title">Talks &amp; Workshops</h1>
+
+            <p>
+                I give talks and conduct workshops for community events. I’ve spoken at GDG events, VueJS Cebu, and other meetups,
+                usually about Web Platform APIs, Progressive Web Apps, and Firebase.
+            </p>
+
+            <div class="UpcomingEvents">
+                <h2 class="UpcomingEvents__Label">Upcoming Events</h2>
+
+                <article class="Event">
+                    <h1 class="Event__Title">GCP Next Extended Cebu 2019</h1>
+                    <h2 class="Event__Subtitle">Scheduling Cloud Functions for Firebase</h2>
+
+                    <time class="Event__Date" datetime="2019-05-11">May 11, 2019</time>
+                    <p class="Event__Venue">The Company, IT Park, Cebu City</p>
+                </article>
+
+                <article class="Event">
+                    <h1 class="Event__Title">Facebook Developer Circles Cebu</h1>
+                    <h2 class="Event__Subtitle">Building GraphQL Projects</h2>
+
+                    <time class="Event__Date" datetime="2019-05-25">May 25, 2019</time>
+                    <p class="Event__Venue">Mabuhay Tower, Cebu City</p>
+                </article>
+            </div>
+
+            <a class="SeeAllEvents" href="/events">See all talks and workshops</a>
         </section>
     </body>
 </html>
