Add markup and styles for Technology section

--- a/source/index.njk
+++ b/source/index.njk
@@ -80,5 +80,26 @@
 
             <a class="SeeAllEvents" href="/events">See all talks and workshops</a>
         </section>
+
+        <section class="Section Technology l-Wrapper l-LeftTwoThirds">
+            <h1 class="Section__Title">Technology</h1>
+
+            <p>Here are some of the technologies that I have experience using on my projects, both professional and personal ones:</p>
+
+            <ul class="TechnologyList">
+                <li class="TechnologyList__Item"><img src="static/images/icons/html5.png" alt="HTML5"></li>
+                <li class="TechnologyList__Item"><img src="static/images/icons/css3.png" alt="CSS3"></li>
+                <li class="TechnologyList__Item"><img src="static/images/icons/javascript.png" alt="JavaScript"></li>
+                <li class="TechnologyList__Item"><img src="static/images/icons/vue.png" alt="VueJS"></li>
+                <li class="TechnologyList__Item"><img src="static/images/icons/firebase.png" alt="Firebase"></li>
+                <li class="TechnologyList__Item"><img src="static/images/icons/nodejs.png" alt="NodeJS"></li>
+                <li class="TechnologyList__Item"><img src="static/images/icons/pwa.png" alt="Progressive Web Apps"></li>
+                <li class="TechnologyList__Item"><img src="static/images/icons/sass.png" alt="SASS"></li>
+                <li class="TechnologyList__Item"><img src="static/images/icons/django.png" alt="Django"></li>
+                <li class="TechnologyList__Item"><img src="static/images/icons/electron.png" alt="Electron"></li>
+                <li class="TechnologyList__Item"><img src="static/images/icons/react.png" alt="ReactJS"></li>
+                <li class="TechnologyList__Item"><img src="static/images/icons/netlify.png" alt="Netlify"></li>
+            </ul>
+        </section>
     </body>
 </html>
