--- a/source/static/stylesheets/home.css
+++ b/source/static/stylesheets/home.css
@@ -213,3 +213,23 @@
     margin-top: auto;
     margin-bottom: 1rem;
 }
+
+
+
+/* TECHNOLOGY SECTION */
+
+.TechnologyList {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin-right: -4rem;
+    list-style: none;
+}
+
+.TechnologyList__Item {
+    margin: 1.6rem 4rem 1.6rem 0;
+}
+
+.TechnologyList__Item img {
+    display: block;
+}
