Add markup and styles for Get In Touch section

--- a/source/index.njk
+++ b/source/index.njk
@@ -101,5 +101,12 @@
                 <li class="TechnologyList__Item"><img src="static/images/icons/netlify.png" alt="Netlify"></li>
             </ul>
         </section>
+
+        <section class="Section GetInTouch l-Wrapper l-RightTwoThirds">
+            <h1 class="Section__Title">Get In Touch</h1>
+
+            <p>Feel free to <a href="mailto:arnellebalane@gmail.com">send me an email</a> or reach me through social media and let’s make the Web more awesome!</p>
+            <p>Have a great day!</p>
+        </section>
     </body>
 </html>
