--- a/source/index.njk
+++ b/source/index.njk
@@ -21,7 +21,7 @@
             </nav>
         </header>
 
-        <section class="Hero l-Wrapper l-LeftTwoThirds">
+        <section class="Section Hero l-Wrapper l-LeftTwoThirds">
             <img class="Avatar" src="static/images/avatar.jpg" alt="Arnelle Balane">
 
             <div class="Hero__Details">
@@ -38,7 +38,7 @@
             </div>
         </section>
 
-        <section class="Section l-Wrapper l-LeftTwoThirds">
+        <section class="Section About l-Wrapper l-LeftTwoThirds">
             <h1 class="Section__Title">About</h1>
 
             <p>
