Add markup and styles for Footer section

--- a/source/index.njk
+++ b/source/index.njk
@@ -108,5 +108,13 @@
             <p>Feel free to <a href="mailto:arnellebalane@gmail.com">send me an email</a> or reach me through social media and let’s make the Web more awesome!</p>
             <p>Have a great day!</p>
         </section>
+
+        <footer class="Footer l-Wrapper">
+            <p class="Footer__Copyright">&copy; 2019 Arnelle Balane. All Rights Reserved.</p>
+            <small class="Footer__BuiltWith">
+                This site is built with {% externalLink 'Eleventy', 'https://www.11ty.io/' %} and hosted on {% externalLink 'Netlify', 'https://www.netlify.com/' %}.<br>
+                The source code is hosted on {% externalLink 'Github', 'https://github.com/' %}.
+            </small>
+        </footer>
     </body>
 </html>
