Replace pink squares with more subtle dot grid

--- a/source/index.njk
+++ b/source/index.njk
@@ -102,7 +102,7 @@
             </ul>
         </section>
 
-        <section class="Section GetInTouch l-Wrapper l-RightTwoThirds">
+        <section class="Section GetInTouch l-Wrapper l-LeftTwoThirds">
             <h1 class="Section__Title">Get In Touch</h1>
 
             <p>Feel free to <a href="mailto:arnellebalane@gmail.com">send me an email</a> or reach me through social media and let’s make the Web more awesome!</p>
