Make Header and Navigation components responsive

--- a/source/index.njk
+++ b/source/index.njk
@@ -11,17 +11,19 @@
     </head>
 
     <body>
-        <header class="Header l-Wrapper">
-            <h1 class="SiteName">Hey, I'm Arnelle!</h1>
+        <header class="Header">
+            <div class="l-Wrapper">
+                <h1 class="SiteName">Hey, I'm Arnelle!</h1>
 
-            <nav class="Navigation">
-                <a class="Navigation__Item" href="/articles">Articles</a>
-                <a class="Navigation__Item" href="/projects">Projects</a>
-                <a class="Navigation__Item" href="/events">Events</a>
-            </nav>
+                <nav class="Navigation">
+                    <a class="Navigation__Item" href="/articles">Articles</a>
+                    <a class="Navigation__Item" href="/projects">Projects</a>
+                    <a class="Navigation__Item" href="/events">Events</a>
+                </nav>
+            </div>
         </header>
 
-        <section class="Section Hero l-Wrapper l-LeftTwoThirds">
+        <!-- <section class="Section Hero l-Wrapper l-LeftTwoThirds">
             <img class="Avatar" src="static/images/avatar.jpg" alt="Arnelle Balane">
 
             <h2 class="Hero__Title">Web Developer from <strong>Cebu, Philippines</strong></h2>
@@ -115,6 +117,6 @@
                 This site is built with {% externalLink 'Eleventy', 'https://www.11ty.io/' %} and hosted on {% externalLink 'Netlify', 'https://www.netlify.com/' %}.<br>
                 The source code is hosted on {% externalLink 'Github', 'https://github.com/' %}.
             </small>
-        </footer>
+        </footer> -->
     </body>
 </html>
